[gd_scene load_steps=2 format=3 uid="uid://ch7ka4pjtxr78"]

[ext_resource type="Script" path="res://vehicles/common/vehicle_3W/vehicle_3W_wheel/vehicle_3W_wheel.gd" id="1_nx3hd"]

[node name="Vehicle_3W_Wheel" type="Node3D"]
script = ExtResource("1_nx3hd")
rest_length = 0.35
spring_stiffness = 2500.0
rear_wheel_meshres = null

[node name="FrontFenderMesh" type="MeshInstance3D" parent="."]

[node name="FrontWheelMesh" type="MeshInstance3D" parent="FrontFenderMesh"]

[node name="RearWheelMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, 0)

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.65, 0)
